src/test/deca/codegen/valid/declarations/declVarSimple.deca
// Description :
//    Test simple de déclarations de variables
//
// Resultats :
//    x = 1 | y = 2

{
    int x = 1;
    int y = 2;

    println("x = ", x, " | y = ", y);
}